[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "tsp-solver"
path = "backend/main.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.4.0"
actix-web = "4.0.1"
dsync = "0"
futures-util = "0.3.21"
create-rust-app = {version="8", default-features = false, features=["plugin_dev", "plugin_auth", "plugin_container", "database_sqlite", "backend_actix-web"]}
serde_json = "1.0.79"
tsync = "1"
polars = { version = "0.25.1", features = ["ndarray"] }
itertools = "0.10.5"
travelling_salesman = "1.1.22"
time = "0.3.17"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.diesel]
default-features = false
features = ["sqlite", "r2d2", "chrono"]
version = "2.0.0-rc.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[package]
default-run = "tsp-solver"
edition = "2021"
name = "tsp-solver"
publish = false
version = "0.1.0"
[profile.dev]
debug-assertions = true
